Complete the json file by adding the rest products and cotmitize the function that display the products and add a paginiation the display the rest of the products

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -703,6 +703,14 @@ video {
   margin-top: 2rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -724,6 +732,14 @@ video {
   height: fit-content;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
 .w-3 {
   width: 0.75rem;
 }
@@ -742,6 +758,14 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .max-w-full {
@@ -841,6 +865,16 @@ video {
   border-color: transparent;
 }
 
+.border-lBrown {
+  --tw-border-opacity: 1;
+  border-color: rgb(221 161 94 / var(--tw-border-opacity));
+}
+
+.border-s-lBrown {
+  --tw-border-opacity: 1;
+  border-inline-start-color: rgb(221 161 94 / var(--tw-border-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -937,6 +971,11 @@ video {
   line-height: 1.25rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -959,6 +998,16 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
+.text-gray {
+  --tw-text-opacity: 1;
+  color: rgb(54 53 55 / var(--tw-text-opacity));
 }
 
 .shadow-lg {
@@ -1004,6 +1053,10 @@ video {
 .navItem:active {
   --tw-text-opacity: 1;
   color: rgb(170 97 34 / var(--tw-text-opacity));
+}
+
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
 }
 
 .hover\:border-lBrown:hover {
