Modification concernant le centrage du container

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -728,6 +728,10 @@ video {
   height: 260px;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -848,6 +852,11 @@ video {
 
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-l {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
 }
 
 .border {
