fixes to the overall structure

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1697,6 +1697,10 @@ video {
   border-radius: 0.125rem;
 }
 
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
 .rounded-e-full {
   border-start-end-radius: 9999px;
   border-end-end-radius: 9999px;
